k8s/overlays/aws/delete-archived-services.yaml
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-quality-service
  namespace: amacc
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: data-quality-service
  namespace: amacc
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esg-service
  namespace: amacc
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: esg-service
  namespace: amacc
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: revenue-service
  namespace: amacc
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: revenue-service
  namespace: amacc
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: amacc
